--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <h3>See below for my course work and projects as I learn HTML, CSS, and JAVA.</h3> 
  <hr /> 
  <h3><a href="./public/bday_invite.html">My Birthday Invite Prouject</a></h3>
- <img src="../4.3 HTML Porfolio Project/assets/images/bday cake.png" height="200" alt="BDay Invite Project"/>
+ <img src="./assets/images/bday cake.png" height="200" alt="BDay Invite Project"/>
  <hr />
  <h3><a href="./public/movie_ranking.html">My Movie Ranking Project</a></h3>
  <img src="../4.3 HTML Porfolio Project/assets/images/movie_ranking.png" height="200" alt="My Movie Ranking Project"/>
