--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <img src="../assets/images/bday cake.png" height="200" alt="BDay Invite Project"/>
  <hr />
  <h3><a href="./public/movie_ranking.html">My Movie Ranking Project</a></h3>
- <img src="../4.3 HTML Porfolio Project/assets/images/movie_ranking.png" height="200" alt="My Movie Ranking Project"/>
+ <img src="../assets/images/movie_ranking.png" height="200" alt="My Movie Ranking Project"/>
  <hr /> 
  <h4><a href="./public/contact.html">Contact Me</a>  | <a href=public/about.html>About Me</a></h4>
 </body>
