--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
  <h3>See below for my course work and projects as I learn HTML, CSS, and JAVA.</h3> 
  <hr /> 
  <h3><a href="./public/bday_invite.html">My Birthday Invite Prouject</a></h3>
- <img src="./assets/images/bday cake.png" height="200" alt="BDay Invite Project"/>
+ <img src="../4.3 HTML Porfolio Project/assets/images/bday cake.png" height="200" alt="BDay Invite Project"/>
  <hr />
  <h3><a href="./public/movie_ranking.html">My Movie Ranking Project</a></h3>
- <img src="./assets/images/movie_ranking.png" height="200" alt="My Movie Ranking Project"/>
+ <img src="../4.3 HTML Porfolio Project/assets/images/movie_ranking.png" height="200" alt="My Movie Ranking Project"/>
  <hr /> 
- <h4><a href="./public/contact.html">Contact Me</a>  | <a href=public/about.html>About Me</a></h4>
+ <h4>
+ <a href=./public/contact.html>Contact Me</a>|
+ <a href=public/about.html>About Me</a>|
+ <a href=./public/resume.html>My Resume</a>|
+</h4>
+ <footer>PAYBAKE19</footer>
 </body>
 </html>
 
