--- a/public/contact.html
+++ b/public/contact.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Me</title>
+</head>
+<body>
 <h1>Contact Me</h1>
 <p>Tel: +123456789</p>
 <p>Email 123@gmail.com</p>
@@ -9,3 +17,5 @@
 </p>
 
 <p>Just message me on GitHub</p>
+</body>
+</html>
